@@ -45,7 +45,7 @@ with a number, the script cannot make a suggestion:
     >>> from zest.releaser import postrelease
     >>> postrelease.main()
     Current version is '0.1dev'
-    Question: Enter new development version ('dev' will be appended): 
+    Question: Enter new development version ('.dev0' will be appended): 
     Our reply: 0.2
     Checking data dict
     Question: OK to commit this (Y/n)?
@@ -63,7 +63,7 @@ The changelog and setup.py are at 0.2 and indicate dev mode:
     from setuptools import setup, find_packages
     import os.path
     <BLANKLINE>
-    version = '0.2dev'
+    version = '0.2.dev0'
 
 To check some corner cases we switch back and forth between prerelease
 and postrelease.  The next version after 0.2.19 should not be 0.2.110
@@ -80,7 +80,7 @@ but 0.2.20:
     >>> utils.answers_for_testing = ['', '']
     >>> postrelease.main()
     Current version is '0.2.19'
-    Question: Enter new development version ('dev' will be appended) [0.2.20]: 
+    Question: Enter new development version ('.dev0' will be appended) [0.2.20]: 
     Our reply: <ENTER>
     Checking data dict
     Question: OK to commit this (Y/n)?
@@ -104,7 +104,7 @@ cannot suggest a reasonable number:
     >>> utils.answers_for_testing = ['0.3rc', '']
     >>> postrelease.main()
     Current version is '0.3beta'
-    Question: Enter new development version ('dev' will be appended): 
+    Question: Enter new development version ('.dev0' will be appended): 
     Our reply: 0.3rc
     Checking data dict
     Question: OK to commit this (Y/n)?
@@ -122,7 +122,7 @@ Numbers and characters can be combined:
     >>> utils.answers_for_testing = ['', '']
     >>> postrelease.main()
     Current version is '1.0a1'
-    Question: Enter new development version ('dev' will be appended) [1.0a2]: 
+    Question: Enter new development version ('.dev0' will be appended) [1.0a2]: 
     Our reply: <ENTER>
     Checking data dict
     Question: OK to commit this (Y/n)?
